--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Mydevelopah</h2>
-                <p class="animate__animated animate__fadeInUp">(developaH… Creating unique products that make housing affordability a reality.)</p>
+                <p class="animate__animated animate__fadeInUp">Creating unique products that make housing affordability a reality</p>
                 <div>
                   <a href="" class="btn-menu animate__animated animate__fadeInUp scrollto">Manufacturers</a>
                   <a href="" class="btn-book animate__animated animate__fadeInUp scrollto">About Us</a>
@@ -91,7 +91,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">MydevelopaH…</h2>
-                <p class="animate__animated animate__fadeInUp">(developaH… Creating unique products that make housing affordability a reality.)</p>
+                <p class="animate__animated animate__fadeInUp">Creating unique products that make housing affordability a reality</p>
                 <div>
                   <a href="" class="btn-menu animate__animated animate__fadeInUp scrollto">Manufacturers</a>
                   <a href="" class="btn-book animate__animated animate__fadeInUp scrollto">About Us</a>
