sign in removed

--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="" class="book-a-table-btn scrollto">Sign In</a>
-
     </div>
   </header><!-- End Header -->
 
@@ -113,7 +111,7 @@
         <div class="row">
 
           <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/prom.jpg");margin-left: 10px;'>
-            <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a> -->
+            <a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center align-items-stretch">
