--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>mydevelopah - Home</title>
+  <title>Developah - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -31,64 +31,36 @@
 <body>
 
 
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top d-flex align-items-center header">
+  <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center header-transparent">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-
-      <div class="logo me-auto">
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-      </div>
-
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li><a class="nav-link scrollto" href="about.php">Building Materials</a></li>
-          <li><a class="nav-link scrollto" href="marketplace.php">MarketPlace</a></li>
-          <li><a class="nav-link scrollto" href="builddesign.php">Design and Build</a></li>
-          <li class="dropdown"><a href="#"><span>Manufacturer</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Partners</a></li>
-            </ul>
-          </li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-      <a href="" class="book-a-table-btn scrollto">Sign In</a>
-
+    <div class="logo me-auto">
+     
+      <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
     </div>
-  </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container">
-      <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <nav id="navbar" class="navbar order-last order-lg-0">
+      <ul>
+        <li><a class="nav-link scrollto active" href="">Home</a></li>
+        <li><a class="nav-link scrollto" href="">Building Materials & MarketPlace</a></li>
+        <li><a class="nav-link scrollto" href="">Design & Build</a></li>
+        <li><a class="nav-link scrollto" href="">Manufacturer Login</a></li>
+        <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="#">Partners</a></li>
+          </ul>
+        </li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
 
-        <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-
-        <div class="carousel-inner" role="listbox">
-
-          <!-- Slide 1 -->
-          <div class="carousel-item active" style="background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(assets/img/hero.jpg); background-position: center; background-size: cover;">
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Mydevelopah</h2>
-                <p class="animate__animated animate__fadeInUp">developaH… Creating unique products that make housing affordability a reality</p>
-                <div>
-                    <a href="" class="btn-menu animate__animated animate__fadeInUp scrollto">Manufacturers</a>
-                    <a href="" class="btn-book animate__animated animate__fadeInUp scrollto">About Us</a>
-                  </div>
-              </div>
-            </div>
-          </div>
-
-      </div>
-    </div>
-  </section><!-- End Hero -->
-
+  </div>
+</header><!-- End Header -->
   <main id="main">
 
     <!-- ======= Chefs Section ======= -->
