--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2 class="animate__animated animate__fadeInDown">Developah</h2>
                 <p class="animate__animated animate__fadeInUp">Creating unique products that make housing affordability a reality</p>
                 <div>
-                  <a href="" class="btn-menu animate__animated animate__fadeInUp scrollto">Manufacturers</a>
+               
                   <a href="" class="btn-book animate__animated animate__fadeInUp scrollto">About Us</a>
                 </div>
               </div>
@@ -90,7 +90,7 @@
                 <h2 class="animate__animated animate__fadeInDown">DevelopaH…</h2>
                 <p class="animate__animated animate__fadeInUp">Creating unique products that make housing affordability a reality</p>
                 <div>
-                  <a href="" class="btn-menu animate__animated animate__fadeInUp scrollto">Manufacturers</a>
+               
                   <a href="" class="btn-book animate__animated animate__fadeInUp scrollto">About Us</a>
                 </div>
               </div>
@@ -337,6 +337,54 @@
 
       </div>
     </section><!-- End Events Section -->
+     <!-- ======= Book A Table Section ======= -->
+     <section id="book-a-table" class="book-a-table">
+      <div class="container">
+        <div class="section-title">
+          <h2><span>Detail</span></h2>
+          <p>Be the first to know when we Lauch</p>
+        </div>
+        <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 form-group">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <div class="validate"></div>
+            </div>
+            <div class="col-lg-6 col-md-6 form-group mt-3 mt-md-0">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+              <div class="validate"></div>
+            </div>
+            <!-- <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
+              <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <div class="validate"></div>
+            </div> -->
+            <!-- <div class="col-lg-4 col-md-6 form-group mt-3">
+              <input type="text" name="date" class="form-control" id="date" placeholder="Date" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <div class="validate"></div>
+            </div>
+            <div class="col-lg-4 col-md-6 form-group mt-3">
+              <input type="text" class="form-control" name="time" id="time" placeholder="Time" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <div class="validate"></div>
+            </div>
+            <div class="col-lg-4 col-md-6 form-group mt-3">
+              <input type="number" class="form-control" name="people" id="people" placeholder="# of people" data-rule="minlen:1" data-msg="Please enter at least 1 chars">
+              <div class="validate"></div>
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
+            <div class="validate"></div>
+          </div>
+          <div class="mb-3">
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
+          </div> -->
+          <div class="text-center"><button type="submit">Send Message</button></div>
+        </form>
+
+      </div>
+    </section><!-- End Book A Table Section -->
 
  <!-- ======= Chefs Section ======= -->
  <section id="chefs" class="chefs">
@@ -355,7 +403,7 @@
           <div class="member-info">
             <h4>Adelakun Oluwatobi </h4>
             <h4>CFO</h4>
-            <span>Engineering | HSEM |NIPEX  </span>
+            <span>Material Engineer| HSEM |NIPEX  </span>
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
