--- a/team.html
+++ b/team.html
@@ -42,17 +42,16 @@
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
-        <li><a class="nav-link scrollto active" href="">Home</a></li>
+        <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
         <li><a class="nav-link scrollto" href="">Building Materials & MarketPlace</a></li>
         <li><a class="nav-link scrollto" href="">Design & Build</a></li>
         <li><a class="nav-link scrollto" href="">Manufacturer Login</a></li>
         <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="#">Partners</a></li>
+            <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Partners</a></li>
           </ul>
         </li>
       </ul>
