--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="row">
 
           <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/prom.jpg");margin-left: 10px;'>
-            <a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="assets/video/Developah 1_1_050448.mp4" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center align-items-stretch">
@@ -371,13 +371,13 @@
 
     <div class="row">
 
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-4 col-md-6">
         <div class="member">
           <div class="pic"><img src="assets/img/Team Member Photos/Adelakun Oluwatobi.png" class="img-fluid" alt=""></div>
           <div class="member-info">
             <h4>Adelakun Oluwatobi </h4>
             <h4>CFO</h4>
-            <span>Material Engineer| HSEM |NIPEX  </span>
+            <span>Engineering | HSEM |NIPEX  </span>
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -388,7 +388,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-4 col-md-6">
         <div class="member">
           <div class="pic"><img src="assets/img/Team Member Photos/Kazeem Kayode.jpg" class="img-fluid" alt=""></div>
           <div class="member-info">
@@ -406,7 +406,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-4 col-md-6">
         <div class="member">
           <div class="pic"><img src="assets/img/Team Member Photos/olum.png" class="img-fluid" alt=""></div>
           <div class="member-info">
@@ -425,23 +425,44 @@
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6">
-        <div class="member">
-          <div class="pic"><img src="assets/img/Team Member Photos/Odukoya Modupe.jpg" class="img-fluid" alt=""></div>
-          <div class="member-info">
-            <h4>Odukoya Modupe  </h4>
-            <h4>COO</h4>
-            <span>Graphics designer |Product Photographer | Editor 2 years’ experience</span>
-           
-            <div class="social">
-              <a href=""><i class="bi bi-twitter"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
+      <div class="row" style="margin-top: 40px;">
+
+        <div class="col-lg-4 col-md-6">
+          <div class="member">
+            <div class="pic"><img src="assets/img/Team Member Photos/adeji.png" class="img-fluid" alt=""></div>
+            <div class="member-info">
+              <h4>Ajeleti Ademola </h4>
+              <h4>CFO</h4>
+              <span>Structural and Civil Engineer | 4 + years experience  </span>
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="member">
+            <div class="pic"><img src="assets/img/Team Member Photos/odukoya.png" class="img-fluid" alt=""></div>
+            <div class="member-info">
+              <h4>Odukoya Modupe  </h4>
+              <h4>COO</h4>
+              <span>Graphics designer |Product Photographer | Editor 2 years’ experience</span>
+             
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
     </div>
 
   </div>
