Conatct and SocialMedia

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-
+  <link href="assets/img/developah.ico" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -105,26 +105,24 @@
 
 
      <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <h3>Mydevelopah</h3>
-      <p>DevelopaH provides platform for the initiation, <br>coordination and synchronization of affordable
-         housing construction for <br>the middle and low-income earners, and a marketplace for building materials. </p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+     <footer id="footer">
+      <div class="container">
+        <h3>DevelopaH</h3>
+        <p>DevelopaH provides platform for the initiation, <br>coordination and synchronization of affordable
+           housing construction for <br>the middle and low-income earners, and a marketplace for building materials. </p>
+        <div class="social-links">
+          <a href="https://www.facebook.com/Developah-10023817244421/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/mydevelopah/?hl=en" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/developah/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        </div>
+        <div class="copyright">
+          &copy; Copyright <strong><span>DevelopaH</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          Designed by <a href="">SulPhil Tech Hub</a>
+        </div>
       </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Mydevelopah</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        Designed by <a href="">SulPhil Tech Hub</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+    </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
