--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
- 
+  <link href="assets/img/developah.ico" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -81,7 +81,7 @@
               <div class="col-lg-3 col-md-6 info">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>Ijebu Ode<br> Nigeria</p>
               </div>
   
               <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
@@ -93,13 +93,13 @@
               <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@mydevelopah.com<br>contact@mydevelopahcom</p>
+                <p>info@developah.com<br>contact@developah.com</p>
               </div>
   
               <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                <p>+2347056087975<br>+234705687975</p>
               </div>
             </div>
           </div>
@@ -138,8 +138,8 @@
          housing construction for <br>the middle and low-income earners, and a marketplace for building materials. </p>
       <div class="social-links">
         <a href="https://www.facebook.com/Developah-10023817244421/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.LinkedIn.com/company/developah" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.instagram.com/mydevelopah/?hl=en" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/developah/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>DevelopaH</span></strong>. All Rights Reserved
