--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
          housing construction for <br>the middle and low-income earners, and a marketplace for building materials. </p>
       <div class="social-links">
         <a href="https://www.facebook.com/Developah-10023817244421/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.LinkedIn.com/company/developah" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.instagram.com/mydevelopah/?hl=en" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/developah/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>DevelopaH</span></strong>. All Rights Reserved
