links and time update

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
         <p>DevelopaH provides platform for the initiation, <br>coordination and synchronization of affordable
            housing construction for <br>the middle and low-income earners, and a marketplace for building materials. </p>
         <div class="social-links">
-          <a href="https://www.facebook.com/Developah-10023817244421/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/Developah/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/mydevelopah/?hl=en" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/company/developah/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
